<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rg_ep_energetic"
        android:layout_width="418dp"
        android:layout_height="103dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192">

        <RadioButton
            android:id="@+id/v_ep_energetic_b1"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:text="1" />

        <RadioButton
            android:id="@+id/v_ep_energetic_b2"
            android:layout_width="29dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="2" />

        <RadioButton
            android:id="@+id/v_ep_energetic_b3"
            android:layout_width="27dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="3" />

        <RadioButton
            android:id="@+id/v_ep_energetic_b4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="4" />

        <RadioButton
            android:id="@+id/v_ep_energetic_b5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="5" />

    </RadioGroup>

    <Button
        android:id="@+id/v_ep_button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ep_button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/l_ep_question"
        android:layout_width="322dp"
        android:layout_height="50dp"
        android:text="@string/ep_label_root"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/l_ep_label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ep_label1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <TextView
        android:id="@+id/l_ep_label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ep_label2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356" />

    <TextView
        android:id="@+id/l_ep_label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ep_label3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587" />

    <RadioGroup
        android:id="@+id/rg_ep_happy"
        android:layout_width="418dp"
        android:layout_height="103dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466">

        <RadioButton
            android:id="@+id/v_ep_happy_b1"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:text="1" />

        <RadioButton
            android:id="@+id/v_ep_happy_b2"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:text="2" />

        <RadioButton
            android:id="@+id/v_ep_happy_b3"
            android:layout_width="34dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="3" />

        <RadioButton
            android:id="@+id/v_ep_happy_b4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="4" />

        <RadioButton
            android:id="@+id/v_ep_happy_b5"
            android:layout_width="57dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="5" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/rg_ep_rested"
        android:layout_width="411dp"
        android:layout_height="118dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752">

        <RadioButton
            android:id="@+id/v_ep_rested_b1"
            android:layout_width="76dp"
            android:layout_height="match_parent"
            android:text="1" />

        <RadioButton
            android:id="@+id/v_ep_rested_b2"
            android:layout_width="76dp"
            android:layout_height="match_parent"
            android:text="2" />

        <RadioButton
            android:id="@+id/v_ep_rested_b3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="3" />

        <RadioButton
            android:id="@+id/v_ep_rested_b4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="4" />

        <RadioButton
            android:id="@+id/v_ep_rested_b5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="5" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>